ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: prod-gateway
  namespace: myistio
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - prod.jtthink.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prodinfo
  namespace: myistio
spec:
  hosts:
    - prod.jtthink.com
  gateways:
    - prod-gateway
  http:
    #    - match:
    #        - uri:
    #            prefix: /
    #      route:
    #        - destination:
    #            host: prodsvc
    #            port:
    #              number: 80
    - match:
        - uri:
            prefix: "/p" # 把/p请求重写到/pords 路径去
      rewrite:
        uri: "/pords"
      route:
        - destination:
            host: prodsvc
            port:
              number: 80

    - match:
        - uri:
            prefix: "/rule-p"
      rewrite:
        uri: "/pords"
      route:
        - destination:
            subset: v1svc # 对应prodrule.yaml内的
            host: prodsvc
            port:
              number: 80

    # 其他的服务也可以绑定到这里
    - match:
        - uri:
            prefix: "/r" # 把/p请求重写到/pords 路径去
      rewrite:
        uri: "/review"
      route:
        - destination:
            host: reviewsvc
            port:
              number: 80
